# hackathon-kanshan-bot

./: .gitignore  .npmrc  GITHUB_REPO.md  NOTICE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: desktop-build.yml
apps/desktop-tauri/: README.md  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/react-host/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
assets/: README.md
assets/model/: README.md  (+1 more)
docker/: README.md  backend.Dockerfile  docker-compose.yml
docs/: desktop-signing.md
kanshan/: .gitignore  API.md  README.md  start.sh  stop.sh  test_weather.py
kanshan/backend/: .env.example  pyproject.toml  requirements.txt
kanshan/backend/app/: __init__.py  config.py  db.py  main.py  schema.sql  seed.sql
kanshan/backend/app/agent/: memory.py  rate_limit.py
kanshan/backend/app/routes/: __init__.py  claude.py
kanshan/backend/app/sidecar/: __init__.py  client.py  supervisor.py
kanshan/backend/app/skills/: __init__.py  weather.py  zhihu.py
kanshan/backend/config/: config.example.json
planning/: README.md  backend-rfc.md  frontend-rfc.md  game-runtime-plan.md  kanshan-art-direction.md  kanshan-state-and-items-plan.md  product-design.md  stage-two-three-runtime.md
scripts/: build-react-host.mjs  compress-web-model.mjs  fetch-model-assets.mjs  release.mjs
(+128 files in other folders)
